refactor(*): 添加错误响应DTO定义
